--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My site</title>
+  <title>Mon nouveau site</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1><em>Hello, world!</em></h1>
   <p>This is my first GitHub Pages site.</p>
+  <p>Hi !!!</p>
+  <p> yyyyyyyyyyo</p>
 </body>
-</html>
+</html> 
